# Please

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  broskifile  clippy.toml  deny.toml  dumper.sh  install.sh  justfile  pleasefile  rustfmt.toml  uninstall.sh
.github/workflows/: ci.yml  docs-ci.yml  docs-deploy.yml  release.yml
crates/broski-cache/: Cargo.toml
crates/broski-cache/src/: lib.rs
crates/broski-cli/: Cargo.toml
crates/broski-cli/src/: main.rs
crates/broski-cli/tests/: e2e_acid.rs  e2e_cache.rs  e2e_doctor.rs  e2e_explain.rs  e2e_graph.rs  e2e_list.rs
crates/broski-cli/tests/fixtures/basic/: broskifile
crates/broski-cli/tests/fixtures/cycle/: broskifile
crates/broski-cli/tests/support/: mod.rs
crates/broski-core/: Cargo.toml
crates/broski-core/benches/: core_bench.rs
crates/broski-core/src/: config.rs  executor.rs  fingerprint.rs  graph.rs  lib.rs  model.rs  parser_winnow.rs  resolver.rs  runtime.rs  validator.rs
crates/broski-store/: Cargo.toml
crates/broski-store/src/: lib.rs
crates/please-cache/: Cargo.toml
crates/please-cache/src/: lib.rs
crates/please-cli/: Cargo.toml
crates/please-cli/src/: main.rs
crates/please-cli/tests/: e2e.rs  e2e_cache.rs  e2e_explain.rs  e2e_graph.rs  e2e_list.rs
crates/please-cli/tests/fixtures/basic/: pleasefile
crates/please-core/: Cargo.toml
crates/please-core/benches/: core_bench.rs
crates/please-core/src/: config.rs  executor.rs  fingerprint.rs  graph.rs  lib.rs  model.rs  parser_winnow.rs  resolver.rs  runtime.rs  validator.rs
crates/please-store/: Cargo.toml
crates/please-store/src/: lib.rs
docs/: README.md  migration.md  perf.md  release-runbook.md  release-v0.1.md  release-v0.2.md  release-v0.3.md  release-v0.4.md  release-v0.5.md  security.md  variables.md  watch-mode.md
docs/legacy/: architecture.md  cache-telemetry.md  dsl-v0.5-reference.md  install.md  migration.md  release-runbook.md  release-v0.1.md  release-v0.3.md  release-v0.5.md  security.md  showcase.md
docs/legacy/research/: build-systems-a-la-carte.md
docs/reports/: v0.5.2-security-hardening.md
docs/research/: moonrepo-runner-notes.md  nix-thesis-summary.md
examples/: README.md
examples/basic/: pleasefile
examples/basic/data/: input.txt
examples/go-http/: broskifile  go.mod  pleasefile
examples/go-http/cmd/server/: main.go  main_test.go
examples/minimal/: broskifile  pleasefile
examples/node-web/: broskifile  package.json  pleasefile
examples/node-web/scripts/: build.mjs
examples/node-web/src/: server.js  server.test.js
examples/polyglot/: Cargo.toml  broskifile  pleasefile
examples/polyglot/data/: input.txt
examples/polyglot/src/: main.rs
examples/python-cli/: broskifile  pleasefile
examples/python-cli/src/: app.py
examples/python-cli/tests/: test_app.py
examples/showcase/: README.md  broskifile  pleasefile
examples/showcase/backend/src/: main.rs
examples/showcase/frontend/: index.html  package-lock.json  package.json
examples/showcase/frontend/src/: App.tsx
examples/showcase/scripts/: prove-worth.sh
scripts/: ci_local.sh
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  vercel.json
website/blog/: README.md
website/docs/: index.md
website/docs/architecture/: cache-explain.mdx  engine-overview.mdx  index.mdx  why-broski.mdx
website/docs/cli/: commands.mdx  watch-mode.mdx
website/docs/dsl/: annotations.mdx  imports-and-decorators.mdx  reference-table.mdx  tasks-and-params.mdx
website/docs/operations/: anti-patterns.mdx  common-mistakes.mdx  faq.mdx  index.mdx  migration.mdx  release-runbook.mdx  troubleshooting.mdx
website/docs/quickstart/: first-broskifile.mdx  index.mdx  install.md  make-just-broski.mdx  make-just-please.mdx  thirty-second-quickstart.mdx
website/docs/releases/: index.mdx  v0.4.md  v0.5.md
website/src/components/: ToolComparison.tsx
website/src/css/: custom.css
website/src/theme/: MDXComponents.tsx
website/versioned_docs/version-v0.4/: index.md
website/versioned_docs/version-v0.4/architecture/: cache-explain.mdx  engine-overview.mdx
website/versioned_docs/version-v0.4/cli/: commands.mdx  watch-mode.mdx
website/versioned_docs/version-v0.4/dsl/: imports-and-decorators.mdx  interpolation-and-builtins.mdx  overview.mdx  tasks-and-params.mdx
website/versioned_docs/version-v0.4/operations/: migration.mdx  security.mdx
website/versioned_docs/version-v0.4/quickstart/: first-broskifile.mdx  first-pleasefile.mdx  install.md  make-just-broski.mdx
website/versioned_docs/version-v0.4/releases/: v0.5.md
website/versioned_sidebars/: version-v0.4-sidebars.json
