[workspace]
members = [
  "crates/please-cli",
  "crates/please-core",
  "crates/please-cache",
  "crates/please-store",
]
resolver = "2"

[workspace.package]
version = "0.3.0-beta.3"
edition = "2021"
license = "MIT"
authors = ["Himudigonda"]
repository = "https://github.com/himudigonda/Please"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
indicatif = "0.17"
libc = "0.2"
num_cpus = "1.17"
petgraph = "0.6"
rayon = "1.10"
reflink-copy = "0.1"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
tempfile = "3.14"
thiserror = "2.0"
toml = "0.8"
walkdir = "2.5"
which = "7.0"
winnow = "0.7"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
