[workspace]
members = [
  "crates/broski-cli",
  "crates/broski-core",
  "crates/broski-cache",
  "crates/broski-store",
]
resolver = "2"

[workspace.package]
version = "0.6.1"
edition = "2021"
license = "MIT"
authors = ["Himudigonda"]
repository = "https://github.com/himudigonda/Broski"

[workspace.dependencies]
aho-corasick = "1.1"
anyhow = "1.0"
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
ignore = "0.4"
indicatif = "0.17"
libc = "0.2"
miette = { version = "7.2", features = ["fancy"] }
num_cpus = "1.17"
notify = "8.2"
petgraph = "0.6"
rayon = "1.10"
reflink-copy = "0.1"
rand = "0.8"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
tempfile = "3.14"
thiserror = "2.0"
toml = "0.8"
walkdir = "2.5"
which = "7.0"
winnow = "0.7"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
