[package]
name = "broski-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aho-corasick.workspace = true
anyhow.workspace = true
blake3.workspace = true
glob.workspace = true
indicatif.workspace = true
libc.workspace = true
miette.workspace = true
num_cpus.workspace = true
notify.workspace = true
petgraph.workspace = true
rayon.workspace = true
reflink-copy.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true
which.workspace = true
winnow.workspace = true
broski-cache = { path = "../broski-cache" }
broski-store = { path = "../broski-store" }

[dev-dependencies]
criterion = "0.5"
tempfile.workspace = true

[[bench]]
name = "core_bench"
harness = false
